--- a/src/app/character-tile/CharacterTileButton.m.scss
+++ b/src/app/character-tile/CharacterTileButton.m.scss
@@ -23,8 +23,7 @@
 
   // Display an outline when hovering characters
   @media (hover: hover) {
-    &:hover,
-    &:active {
+    @include interactive($hover: true, $active: true) {
       @include selected-highlight;
     }
   }
