--- a/src/app/dim-ui/ClosableContainer.m.scss
+++ b/src/app/dim-ui/ClosableContainer.m.scss
@@ -15,8 +15,8 @@
   right: 2px;
   background-image: url('images/close.png');
   background-color: rgba(100, 100, 100, 0.8);
-  &:hover,
-  &:focus-visible {
+
+  @include interactive($hover: true, $focus: true) {
     background-color: var(--theme-accent-primary);
     outline: none;
   }
@@ -27,7 +27,9 @@
     display: none;
   }
 
-  &:hover .close {
-    display: inline-block;
+  @include interactive($hover: true) {
+    .close {
+      display: inline-block;
+    }
   }
 }
