--- a/src/app/dim-ui/FilterPills.m.scss
+++ b/src/app/dim-ui/FilterPills.m.scss
@@ -30,10 +30,8 @@
     background-color: rgb(255, 255, 255, 0.2);
   }
 
-  @media (hover: hover) {
-    &:hover {
-      border-color: rgba(255, 255, 255, 0.3);
-    }
+  @include interactive($hover: true) {
+    border-color: rgba(255, 255, 255, 0.3);
   }
 
   :global(.app-icon) {
