--- a/src/app/dim-ui/Sheet.m.scss
+++ b/src/app/dim-ui/Sheet.m.scss
@@ -91,9 +91,8 @@ $control-color: rgba(255, 255, 255, 0.5);
     width: 24px;
     font-size: 24px;
   }
-  &:active,
-  &:hover,
-  &:focus-visible {
+
+  @include interactive($hover: true, $active: true, $focus: true) {
     color: var(--theme-accent-primary);
   }
 }
