--- a/src/app/inventory-page/StoreBucket.scss
+++ b/src/app/inventory-page/StoreBucket.scss
@@ -99,7 +99,8 @@
   padding: 4px;
   opacity: 0.3;
   transition: opacity 0.3s ease-in-out;
-  &:hover {
+
+  @include interactive($hover: true) {
     opacity: 1;
   }
 }
