--- a/src/app/item-popup/ItemPopupHeader.m.scss
+++ b/src/app/item-popup/ItemPopupHeader.m.scss
@@ -15,8 +15,7 @@
 }
 
 .armory {
-  &:hover,
-  &:focus-visible {
+  @include interactive($hover: true, $focus: true) {
     outline: none;
     h1 {
       text-decoration: underline;
