--- a/src/app/item-popup/NotesArea.m.scss
+++ b/src/app/item-popup/NotesArea.m.scss
@@ -5,7 +5,8 @@
   cursor: pointer;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
-  &:hover {
+
+  @include interactive($hover: true) {
     color: var(--theme-accent-primary);
   }
   &.noNotesYet {
