--- a/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
@@ -120,7 +120,8 @@
       font-size: 15px;
     }
   }
-  &:hover {
+
+  @include interactive($hover: true) {
     background-color: var(--theme-accent-secondary);
     color: #222;
   }
@@ -166,8 +167,8 @@
 
 .inGameLoadoutButton {
   composes: resetButton from '../../dim-ui/common.m.scss';
-  &:hover,
-  &:focus-visible {
+
+  @include interactive($hover: true, $focus: true) {
     outline: 2px solid var(--theme-accent-primary);
   }
   display: block;
