--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -245,8 +245,7 @@ textarea {
   line-height: calc(16 / 12);
   caret-color: var(--theme-accent-primary);
 
-  &:hover,
-  &:focus {
+  @include interactive($hover: true, $focus: true) {
     box-shadow: inset 0 0 0 1px var(--theme-search-dropdown-border);
   }
 }
@@ -275,8 +274,7 @@ select {
     height: 35px;
   }
 
-  &:hover,
-  &:active {
+  @include interactive($hover: true, $active: true) {
     background-color: var(--theme-accent-primary);
     color: var(--theme-text-invert);
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="black" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>');
