--- a/src/app/strip-sockets/StripSockets.m.scss
+++ b/src/app/strip-sockets/StripSockets.m.scss
@@ -33,7 +33,8 @@
   flex-direction: row;
   height: 100%;
   box-sizing: border-box;
-  &:hover {
+
+  @include interactive($hover: true) {
     background-color: rgba(255, 255, 255, 0.1);
   }
   &:focus {
