--- a/src/app/accounts/SelectAccount.m.scss
+++ b/src/app/accounts/SelectAccount.m.scss
@@ -24,8 +24,8 @@
   &:active {
     outline: none;
   }
-  &:hover,
-  &:focus {
+
+  @include interactive($hover: true, $focus: true) {
     border-color: var(--theme-accent-primary);
     color: var(--theme-accent-primary);
     background-color: rgba(255, 255, 255, 0.1);
