--- a/src/app/dim-ui/CheckButton.m.scss
+++ b/src/app/dim-ui/CheckButton.m.scss
@@ -22,8 +22,7 @@
   }
 
   // Don't do hover
-  &:hover,
-  &:active {
+  @include interactive($hover: true, $active: true) {
     background-color: rgba(255, 255, 255, 0.2) !important;
     color: var(--theme-text) !important;
   }
