--- a/src/app/dim-ui/ExpandableTextBlock.m.scss
+++ b/src/app/dim-ui/ExpandableTextBlock.m.scss
@@ -1,7 +1,10 @@
+@use '../variables.scss' as *;
+
 .textBlockWrapper {
   position: relative;
   overflow: hidden;
-  &:hover {
+
+  @include interactive($hover: true) {
     cursor: pointer;
   }
   &::after {
@@ -10,8 +13,10 @@
     inset: 0;
     box-shadow: inset 0 -31px 20px -20px black;
   }
-  &.open:hover {
-    cursor: default;
+  &.open {
+    @include interactive($hover: true) {
+      cursor: default;
+    }
   }
   &.open::after {
     display: none;
