--- a/src/app/dim-ui/TileGrid.m.scss
+++ b/src/app/dim-ui/TileGrid.m.scss
@@ -31,7 +31,8 @@
   gap: 8px;
   box-sizing: border-box;
   position: relative;
-  &:hover {
+
+  @include interactive($hover: true) {
     background-color: rgba(255, 255, 255, 0.1);
   }
   &:focus-visible {
