--- a/src/app/dim-ui/dim-button.scss
+++ b/src/app/dim-ui/dim-button.scss
@@ -74,7 +74,7 @@
     }
   }
   &.danger {
-    &:hover {
+    @include interactive($hover: true) {
       background-color: $red !important;
     }
   }
