--- a/src/app/inventory-page/InventoryCollapsibleTitle.m.scss
+++ b/src/app/inventory-page/InventoryCollapsibleTitle.m.scss
@@ -43,8 +43,7 @@
     min-height: 24px;
     gap: 6px;
 
-    &:hover,
-    &:focus-visible {
+    @include interactive($hover: true, $focus: true) {
       color: var(--theme-accent-primary);
 
       @include phone-portrait {
