--- a/src/app/inventory-page/Stores.scss
+++ b/src/app/inventory-page/Stores.scss
@@ -121,23 +121,25 @@
       padding-top: 0;
     }
 
-    .item-drag-container:hover {
-      // don't display the default outline when hovering over a draggable subclass item
-      outline: none;
+    .item-drag-container {
+      @include interactive($hover: true) {
+        // don't display the default outline when hovering over a draggable subclass item
+        outline: none;
 
-      // allow the pseudo-element to render outside the bounds of the item
-      contain: layout style;
+        // allow the pseudo-element to render outside the bounds of the item
+        contain: layout style;
 
-      // render a diamond-shaped pseudo-element to act as the border
-      &::before {
-        @include draggable-hover-border;
-        content: '';
-        position: absolute;
-        width: var(--item-size);
-        height: var(--item-size);
-        transform: rotate(45deg) scale(0.7);
-        outline-width: 2px;
-        box-sizing: border-box;
+        // render a diamond-shaped pseudo-element to act as the border
+        &::before {
+          @include draggable-hover-border;
+          content: '';
+          position: absolute;
+          width: var(--item-size);
+          height: var(--item-size);
+          transform: rotate(45deg) scale(0.7);
+          outline-width: 2px;
+          box-sizing: border-box;
+        }
       }
     }
   }
