--- a/src/app/inventory/DraggableInventoryItem.m.scss
+++ b/src/app/inventory/DraggableInventoryItem.m.scss
@@ -1,18 +1,22 @@
-.engram:hover {
-  // don't display the default outline when hovering over a draggable subclass item
-  outline: none;
+@use '../variables.scss' as *;
 
-  // allow the pseudo-element to render outside the bounds of the item
-  contain: layout style;
+.engram {
+  @include interactive($hover: true) {
+    // don't display the default outline when hovering over a draggable subclass item
+    outline: none;
 
-  // render a hexagon-shaped pseudo-element to act as the border
-  &::before {
-    content: '';
-    position: absolute;
-    width: var(--item-size);
-    height: var(--item-size);
-    box-sizing: border-box;
-    background: url('images/engram_outline.svg');
+    // allow the pseudo-element to render outside the bounds of the item
+    contain: layout style;
+
+    // render a hexagon-shaped pseudo-element to act as the border
+    &::before {
+      content: '';
+      position: absolute;
+      width: var(--item-size);
+      height: var(--item-size);
+      box-sizing: border-box;
+      background: url('images/engram_outline.svg');
+    }
   }
 }
 
