--- a/src/app/item-actions/ItemMoveLocations.m.scss
+++ b/src/app/item-actions/ItemMoveLocations.m.scss
@@ -67,8 +67,7 @@
     }
   }
 
-  &:hover,
-  &:focus-visible {
+  @include interactive($hover: true, $focus: true) {
     outline: none;
     &::after {
       content: '';
