--- a/src/app/item-popup/ItemPerksList.m.scss
+++ b/src/app/item-popup/ItemPerksList.m.scss
@@ -12,7 +12,7 @@
   padding: 4px 8px;
   flex-wrap: wrap;
 
-  &:hover {
+  @include interactive($hover: true) {
     background-color: rgba(255, 255, 255, 0.05);
   }
 
