--- a/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
+++ b/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
@@ -33,8 +33,7 @@
     color: #999;
   }
 
-  &:hover,
-  &:focus-within {
+  @include interactive($hover: true, $focusWithin: true) {
     outline: none;
     box-shadow: inset 0 0 0 1px var(--theme-search-dropdown-border);
   }
