--- a/src/app/loadout/loadout-ui/BucketPlaceholder.m.scss
+++ b/src/app/loadout/loadout-ui/BucketPlaceholder.m.scss
@@ -26,7 +26,7 @@
     border-color: var(--theme-accent-primary);
   }
   .placeholder {
-    &:hover {
+    @include interactive($hover: true) {
       opacity: 1;
     }
   }
