--- a/src/app/login/Login.m.scss
+++ b/src/app/login/Login.m.scss
@@ -86,7 +86,8 @@
   background-color: var(--theme-accent-primary);
   color: var(--theme-text-invert);
   text-shadow: none;
-  &:hover {
+
+  @include interactive($hover: true) {
     transform: scale(1.05);
   }
 }
