--- a/src/app/notifications/NotificationButton.m.scss
+++ b/src/app/notifications/NotificationButton.m.scss
@@ -10,7 +10,8 @@
   display: block;
   width: 30%;
   cursor: pointer;
-  &:hover {
+
+  @include interactive($hover: true) {
     background-color: var(--theme-accent-secondary);
     color: #222;
   }
