--- a/src/app/shell/Header.m.scss
+++ b/src/app/shell/Header.m.scss
@@ -55,7 +55,8 @@ $header-height: 44px;
       @include phone-portrait {
         font-size: 24px;
       }
-      &:hover {
+
+      @include interactive($hover: true) {
         color: var(--theme-accent-primary);
         cursor: pointer;
         transition: color 0.2s linear;
@@ -90,8 +91,7 @@ $header-height: 44px;
   color: var(--theme-text);
   cursor: pointer;
 
-  &:hover,
-  &.active {
+  @include interactive($hover: true, $active: true) {
     color: var(--theme-accent-primary);
     transition: color 0.2s linear;
   }
@@ -221,8 +221,7 @@ $header-height: 44px;
       padding-bottom: 6px;
     }
 
-    &:hover,
-    &:focus {
+    @include interactive($hover: true, $focus: true) {
       background-color: var(--theme-accent-primary);
       color: var(--theme-text-invert);
     }
