Fix Europa theme godroll indicator color and add more examples for god/bad rolls when previewing themes

--- a/src/app/themes/_theme-europa.scss
+++ b/src/app/themes/_theme-europa.scss
@@ -71,7 +71,7 @@
   --theme-item-polaroid-masterwork-txt: #000;
   --theme-item-polaroid-capped: #f2a5ce;
   --theme-item-polaroid-capped-txt: #be0a99;
-  --theme-item-polaroid-godroll: white;
+  --theme-item-polaroid-godroll: #0b486b;
   --theme-item-polaroid-trashroll: #d14334;
 
   // Item popup
