--- a/src/app/item-popup/Plug.m.scss
+++ b/src/app/item-popup/Plug.m.scss
@@ -63,15 +63,8 @@
 }
 
 .cannotRoll {
-  fill: #ba594880;
-
-  &.plugged {
-    fill: #ba5948b8;
-  }
-
-  &.selected {
-    fill: #ba5948;
-  }
+  stroke-dasharray: 12 6;
+  stroke-width: 3;
 }
 
 .disabled {
