--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -25,23 +25,20 @@ $content-cells: 5;
 
 .toolbar {
   grid-column: 1 / -1;
-  position: sticky;
   z-index: $toolbar;
   box-sizing: border-box;
 
   top: var(--header-height);
   padding: 8px 8px !important;
-
   border-bottom: none !important;
-  > div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: sticky;
-    left: calc(8px + env(safe-area-inset-left));
-    width: calc(98vw - env(safe-area-inset-left) - env(safe-area-inset-right));
-    gap: 4px;
-  }
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: sticky;
+  left: env(safe-area-inset-left);
+  width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
+  gap: 4px;
 }
 
 .importButton {
