Replace span with pseudoelement

--- a/src/app/item-popup/PlugTooltip.m.scss
+++ b/src/app/item-popup/PlugTooltip.m.scss
@@ -57,7 +57,8 @@
   }
   .cannotRollSection {
     @include tooltip-section-color($red);
-    .cannotRollCircle {
+    p::before {
+      content: '';
       display: inline-block;
       font-size: 12px;
       padding: 6px;
