--- a/src/app/destiny1/loadout-builder/loadout-builder.scss
+++ b/src/app/destiny1/loadout-builder/loadout-builder.scss
@@ -63,7 +63,6 @@ $and-color: #814bcf;
     vertical-align: middle;
     width: var(--item-size);
     height: var(--item-size);
-
     @include interactive($hover: true) {
       opacity: 1;
       transition: 1s;
@@ -99,7 +98,7 @@ $and-color: #814bcf;
   }
 
   .expand-configs {
-    @include interactive($hover: true, $focusWithin: true) {
+    @include interactive($hover: true) {
       color: var(--theme-accent-primary);
       cursor: pointer;
     }
@@ -219,7 +218,6 @@ $and-color: #814bcf;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     cursor: pointer;
-
     @include interactive($hover: true) {
       background-color: rgba(160, 160, 160, 0.8);
       border: 1px solid rgba(32, 32, 32, 0);
