--- a/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
@@ -75,8 +75,7 @@
     }
   }
 
-  &:hover,
-  a:hover {
+  @include interactive($hover: true) {
     background-color: var(--theme-accent-primary);
     color: var(--theme-text-invert) !important;
     > span:first-child > :global(.app-icon) {
@@ -92,6 +91,27 @@
 
     .note {
       color: var(--theme-text-invert);
+    }
+  }
+
+  a {
+    @include interactive($hover: true) {
+      background-color: var(--theme-accent-primary);
+      color: var(--theme-text-invert) !important;
+      > span:first-child > :global(.app-icon) {
+        color: var(--theme-text-invert) !important;
+      }
+      > span:first-child > img:first-child,
+      .modificationIcon {
+        filter: none;
+      }
+      .fashionIcon {
+        filter: invert(1);
+      }
+
+      .note {
+        color: var(--theme-text-invert);
+      }
     }
   }
 
