--- a/src/app/dim-ui/dim-button.scss
+++ b/src/app/dim-ui/dim-button.scss
@@ -34,8 +34,14 @@
     }
   }
 
-  &:hover,
-  &:active,
+  @include interactive($hover: true, $active: true) {
+    background-color: var(--theme-accent-primary) !important;
+    color: var(--theme-text-invert) !important;
+    img {
+      filter: invert(1) drop-shadow(0 0 1px black);
+    }
+  }
+
   &.selected {
     background-color: var(--theme-accent-primary) !important;
     color: var(--theme-text-invert) !important;
@@ -63,8 +69,14 @@
   &[disabled] {
     opacity: 0.5;
     cursor: not-allowed;
-    &:hover,
-    &:active,
+
+    @include interactive($hover: true, $active: true) {
+      background-color: var(--theme-button-bg) !important;
+      color: var(--theme-text) !important;
+      img {
+        filter: drop-shadow(0 0 1px black);
+      }
+    }
     &.selected {
       background-color: var(--theme-button-bg) !important;
       color: var(--theme-text) !important;
