--- a/src/app/loadout/ingame/EditInGameLoadout.m.scss
+++ b/src/app/loadout/ingame/EditInGameLoadout.m.scss
@@ -30,8 +30,15 @@
     height: 48px;
     width: 48px;
   }
-  &:hover,
-  &:active,
+
+  @include interactive($hover: true, $active: true) {
+    background-color: var(--theme-accent-primary);
+    color: var(--theme-text-invert);
+    > img {
+      filter: none !important;
+    }
+  }
+
   &.checked {
     background-color: var(--theme-accent-primary);
     color: var(--theme-text-invert);
@@ -43,8 +50,9 @@
     padding: 2px;
   }
   &.hasLoadout {
-    &:hover,
-    &:active,
+    @include interactive($hover: true, $active: true) {
+      color: var(--theme-text) !important;
+    }
     &.checked {
       color: var(--theme-text) !important;
     }
