fix: migrate remaining selectors

--- a/src/app/dim-ui/dim-button.scss
+++ b/src/app/dim-ui/dim-button.scss
@@ -55,9 +55,11 @@
   .dontInvert {
     filter: invert(0) !important;
 
-    :hover &,
-    :active &,
-    .selected & {
+    @include interactive($hover: true, $active: true) {
+      filter: invert(0) drop-shadow(0 0 1px black) !important;
+    }
+
+    .selected {
       filter: invert(0) drop-shadow(0 0 1px black) !important;
     }
   }
