--- a/src/app/records/Record.m.scss
+++ b/src/app/records/Record.m.scss
@@ -191,9 +191,11 @@
     opacity: 1;
     top: -10px;
   }
-  .triumphRecord:hover & {
-    display: block;
-    opacity: 0.7;
+  .triumphRecord {
+    @include interactive($hover: true) {
+      display: block;
+      opacity: 0.7;
+    }
   }
 }
 
