--- a/src/app/loadout/ingame/RadioButton.m.scss
+++ b/src/app/loadout/ingame/RadioButton.m.scss
@@ -4,7 +4,7 @@
   composes: dim-button from global;
   position: relative;
 
-  @include interactive($hover: true, $$active: true) {
+  @include interactive($hover: true, $active: true) {
     background-color: var(--theme-accent-primary);
     color: var(--theme-text-invert);
     > img {
@@ -27,7 +27,7 @@
     padding: 2px;
   }
   &.hasLoadout {
-    @include interactive($hover: true, $$active: true) {
+    @include interactive($hover: true, $active: true) {
       color: var(--theme-text) !important;
     }
     &.checked {
