--- a/src/app/login/Login.m.scss
+++ b/src/app/login/Login.m.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use '../variables.scss' as *;
 
 .billboard {
@@ -60,7 +61,7 @@
 .warning {
   margin: 16px 0 0 0;
   padding: 0.85em;
-  background: scale-color($red, $lightness: -90%);
+  background: color.scale($red, $lightness: -90%);
   border-top: 4px solid $red;
 
   h2 {
