--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -315,4 +315,4 @@ code {
 }
 
 /* stylelint-disable-next-line no-invalid-position-at-import-rule */
-@import 'app/dim-ui/dim-button.scss';
+@use 'app/dim-ui/dim-button.scss';
