ranks: reset info styling/copy

--- a/src/app/progress/ReputationRank.m.scss
+++ b/src/app/progress/ReputationRank.m.scss
@@ -50,6 +50,9 @@
 
 .factionLevel {
   color: var(--theme-text-secondary);
+  &.max {
+    color: var(--theme-accent-primary);
+  }
 }
 
 .rankIcon {
