--- a/src/app/item-popup/ItemStat.m.scss
+++ b/src/app/item-popup/ItemStat.m.scss
@@ -75,7 +75,7 @@
   margin-left: 4px;
 }
 
-// Colors for the stat bars
+// Colors for the stat bars!
 .masterworkStatBar {
   background-color: $stat-masterworked;
 }
