--- a/src/app/store-stats/D1CharacterStats.m.scss
+++ b/src/app/store-stats/D1CharacterStats.m.scss
@@ -1,7 +1,34 @@
+@use '../variables' as *;
+
+/* INT/DIS/STR bars */
+.statBars {
+  width: 100%;
+  max-width: $emblem-width + 16px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 8px;
+  gap: 4px;
+
+  @include phone-portrait {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.stat {
+  display: grid;
+  grid-template-columns: 16px repeat(5, 1fr);
+  gap: 1px;
+  align-items: center;
+
+  > img {
+    height: 14px;
+    width: 14px;
+  }
+}
+
 .bar {
-  flex: 1;
   height: 7px;
-  margin-left: 1px;
   border-radius: 1px;
   background-color: gray;
   overflow: hidden;
