Fix engram sizing a different way

--- a/src/app/inventory-page/Stores.scss
+++ b/src/app/inventory-page/Stores.scss
@@ -82,7 +82,12 @@
 
   // Engrams. D1 uses this same bucket hash for "Missions"
   .destiny2 .bucket-375726501 & {
+    --engram-size: calc(var(--character-column-width) / 10);
     padding-bottom: 8px;
+
+    @include phone-portrait {
+      --engram-size: calc((100vw - (2 * var(--inventory-column-padding))) / 10);
+    }
 
     .empty-engram {
       border: $item-border-width solid transparent;
@@ -93,7 +98,7 @@
 
     .sub-bucket {
       min-height: 0;
-      grid-template-columns: repeat(10, 1fr);
+      grid-template-columns: repeat(auto-fill, var(--engram-size));
       gap: 0;
       padding: 4px 0 0 0;
 
@@ -104,8 +109,7 @@
 
     .item-drag-container,
     .empty-engram {
-      --item-size: 100%;
-      aspect-ratio: 1 / 1;
+      --item-size: var(--engram-size);
     }
   }
 
