--- a/src/app/inventory-page/StoreBucketDropTarget.m.scss
+++ b/src/app/inventory-page/StoreBucketDropTarget.m.scss
@@ -1,11 +1,13 @@
-.canDrop {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-.over {
-  box-shadow: inset 0 0 6px 0 rgba(255, 255, 255, 0.7);
-}
+:global(.sub-bucket) {
+  .canDrop {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  .over {
+    box-shadow: inset 0 0 6px 0 rgba(255, 255, 255, 0.7);
+  }
 
-.grouped {
-  display: flex;
-  flex-wrap: wrap;
+  .grouped {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
