--- a/src/app/inventory-page/StoreBucketDropTarget.m.scss
+++ b/src/app/inventory-page/StoreBucketDropTarget.m.scss
@@ -1,12 +1,11 @@
 :global(.sub-bucket) {
-  .canDrop {
+  &.canDrop {
     background-color: rgba(255, 255, 255, 0.2);
   }
-  .over {
+  &.over {
     box-shadow: inset 0 0 6px 0 rgba(255, 255, 255, 0.7);
   }
-
-  .grouped {
+  &.grouped {
     display: flex;
     flex-wrap: wrap;
   }
